# geny

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
geny/: __init__.py
geny/cli/: cli.py
geny/commands/: callbacks.py
geny/commands/destroy/: dockerfile.py  main.py  template.py
geny/commands/generate/: dockerfile.py  main.py  template.py
geny/core/: logger.py
geny/core/decorators/: __init__.py  error_handler.py  singleton.py
geny/core/filesystem/: __init__.py  directories.py  files.py  filesystem.py  finder.py  protocols.py  transformations.py
geny/core/templates/: __init__.py  protocols.py  template.py
geny/extensions/: combined.py  discoverable.py
geny/template_files/: env.tpl
geny/template_files/docker/: docker-compose.tpl  dockerfile.tpl
tests/: __init__.py  hello.tpl  hello2.tpl
tests/core/: test_utils.py
tests/core/filesystem/: test_directories.py  test_files.py  test_filesystem.py  test_transformations.py
tests/core/templates/: test_templates.py
