[project]
name = "geny"
description = "An extendable file generator"
authors = [{ name = "Leo Neto", email = "leo@ekletik.com" }]
maintainers = [{ name = "Leo Neto", email = "leo@ekletik.com" }]
requires-python = ">=3.6"
license = { file = "LICENSE" }
readme = "README.md"
version = "0.1.8"
keywords = [
  "automation",
  "files",
  "generators",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Click>=8.1",
  "jinja2>=3.1",
  "inflection>=0.5.1",
  "rich>=13.3",
]

[project.urls]
Homepage = "https://github.com/oleoneto/geny"
Issues = "https://github.com/oleoneto/geny/issues"

[project.scripts]
geny = "geny.cli.cli:cli"
